--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <header>
         <!--bara de navegacion-->
         <nav>
-            <ul>
+            <ul class="seccion">
                 <li>
                     <a href="#">Gmail</a>
                 </li>
                 <li>
                     <a href="#">Imagenes</a>
                 </li>
-                <li>
-                    <a href="#">Icono</a>
+                <li class="menu">
+                    <a href="#"></a>
                 </li>
                 <li>
                     <a href="#">phoyo</a>
