fin de encabezado

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#"></a>
                 </li>
                 <li>
-                    <a href="#">phoyo</a>
+                    <a href="#"><img src="https://lh3.googleusercontent.com/ogw/ADGmqu-s8QF3YQtpmS1EfuU8cUZmgtOCbWg6soZrb-iVbg=s32-c-mo" alt=""></a>
                 </li>
             </ul>
         </nav>
