se izo la maquetacion del contenido principal

--- a/index.html
+++ b/index.html
@@ -31,6 +31,30 @@
         <!--bara de navegacion-->
     </header>
     <!--Encabezado-->
+    <!--todo el conteido principal-->
+    <main>
+        <!--primera seccion sera de la imagen-->
+        <section class="seccion1">
+            <img src="" alt="">
+        </section>
+        <!--fin de primera seccion sera de la imagen-->
+        <!--seccion de busqueda-->
+        <section class="secion2">
+            <div class="principal">
+                <samp class="buscador">
+                </samp>
+                <input type="text">
+                <a class="microfono" href=""></a>
+            </div>
+        </section>
+        <!--seccion de busqueda-->
+        <!--seccionde botones-->
+        <section class="seccion3">
+            <div><button>Buscar con Google</button> </div>
+            <div><button>Me siento con suerte</button> </div>
+        </section>
+    </main>
+    <!--final todo el conteido principal-->
 </body>
 
 </html>
