se dejo en pausa la seccion 2

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <!--primera seccion sera de la imagen-->
         <section class="seccion1">
-            <img src="" alt="">
+            <img src="https://www.google.com.mx/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
         </section>
         <!--fin de primera seccion sera de la imagen-->
         <!--seccion de busqueda-->
