maquetacion de footer

--- a/index.html
+++ b/index.html
@@ -55,6 +55,34 @@
         </section>
     </main>
     <!--final todo el conteido principal-->
+    <!--pie de pagina-->
+    <footer>
+        <ul class="footer_ul">
+            <li>
+                <a href="#">Publicidad</a>
+            </li>
+            <li>
+                <a href="#">Negocios</a>
+            </li>
+            <li>
+                <a href="#">Sobre Google</a>
+            </li>
+            <li>
+                <a href="#">Cómo funciona la Búsqueda</a>
+            </li>
+        </ul>
+        <ul class="footer-ul2">
+            <li>
+                <a href="#">Privacidad</a>
+            </li>
+            <li>
+                <a href="#">Condiciones</a>
+            </li>
+            <li>
+                <a href="#">Preferencia</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
